[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/ui/intro_slide/intro_slide.tres" type="StyleBox" id=1]
[ext_resource path="res://assets/missing.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/TextFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/ui/intro_slide/IntroSlide.gd" type="Script" id=4]
[ext_resource path="res://assets/ui/empty.tres" type="StyleBox" id=5]
[ext_resource path="res://assets/ui/intro_slide/intro_slide_hover.tres" type="StyleBox" id=6]

[node name="IntroSlide" type="Button"]
anchor_left = 1.0
anchor_top = 0.25
anchor_right = 1.0
anchor_bottom = 0.25
margin_left = -350.0
margin_bottom = 72.0
focus_mode = 0
custom_styles/hover = ExtResource( 6 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 1 )
enabled_focus_mode = 0
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 12.0
margin_top = -24.0
margin_right = 60.0
margin_bottom = 24.0
texture = ExtResource( 2 )
stretch_mode = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 72.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
custom_fonts/font = ExtResource( 3 )
text = "placeholder text"
autowrap = true
__meta__ = {
"_edit_lock_": true
}

[node name="DespawnTimer" type="Timer" parent="."]

[connection signal="mouse_entered" from="." to="." method="_on_mouse_enter"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exit"]
[connection signal="pressed" from="." to="." method="queue_free"]
[connection signal="pressed" from="." to="." method="_on_mouse_exit"]
[connection signal="timeout" from="DespawnTimer" to="." method="queue_free"]
